--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SimplePeerTest</title>
   <!-- <script  src="main.js"/> -->
-
-  <!-- <script src="node_modules/simple-peer/simplepeer.min.js" ></script> -->
   <script src="/socket.io/socket.io.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+ 
+  <!-- <script src="node_modules/simple-peer/simplepeer.min.js" ></script> -->
+ 
+  <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
   <script src="/simple-peer"></script>
-  <script src="/lib"></script>
+  <!-- <script src="/lib"></script> -->
+   <script data-main="app.js" src="/requirejs"></script>
 </head>
 
 <body>
   <h1>Test Simple Peer</h1>
-  <video id='your-video' />
+  <video id='your-video'></video>
   <script>
     var socket = io();
     socket.emit('m', "hi");
@@ -31,8 +33,12 @@
       }
     }
 
-    const ui=new UI(socket);
-
+    var ui={};
+    require(["./uiService"],function(uiService){
+     // console.log(uiService);
+      ui=new uiService(socket);
+    });
+    console.log(ui);
     function connect(sec) {
       return new Promise((resolve, reject) => {
         setTimeout(() => {
@@ -64,7 +70,7 @@
         }, sec * 3000);
       });
     }
-    function connectWithDisplayMedia(sec) {
+     function connectWithDisplayMedia(sec) {
       return new Promise((resolve, reject) => {
         setTimeout(() => {
           console.log('after %s sec', sec);
